WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310174
HDR content looks washed out with ToT MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=310174
Summary
HDR content looks washed out with ToT MiniBrowser
Jean-Yves Avenard [:jya]
Reported
2026-03-18 02:14:45 PDT
For videos that do allow HDR, they look all washed out, like its HDR being presented on a SDR display/container without tone mapping being applied STR: open
https://www.youtube.com/watch?v=u_5wLvlRhc0&t=1900s
on an HDR capable screen. See that all colours are washed out.
rdar://172721079
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2026-03-18 03:10:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60851
EWS
Comment 2
2026-03-18 14:15:41 PDT
Committed
309502@main
(d51d49159310): <
https://commits.webkit.org/309502@main
> Reviewed commits have been landed. Closing PR #60851 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug