Source/WebCore/platform/graphics/PlatformVideoColorSpace.h
@@ -35,10 +35,10 @@ namespace WebCore {
 
 struct PlatformVideoColorSpace {
     WTF_DEPRECATED_MAKE_STRUCT_FAST_ALLOCATED(PlatformVideoColorSpace);
-    std::optional<PlatformVideoColorPrimaries> primaries;
-    std::optional<PlatformVideoTransferCharacteristics> transfer;
-    std::optional<PlatformVideoMatrixCoefficients> matrix;
-    std::optional<bool> fullRange;
+    std::optional<PlatformVideoColorPrimaries> primaries { };
+    std::optional<PlatformVideoTransferCharacteristics> transfer { };
+    std::optional<PlatformVideoMatrixCoefficients> matrix { };
+    std::optional<bool> fullRange { };
 
     friend bool operator==(const PlatformVideoColorSpace&, const PlatformVideoColorSpace&) = default;
 };
